--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -164,6 +164,7 @@ LeadSummaryScreen As screen:
                 ZIndex: =2
 
                 SummaryForm As form:
+                    BorderThickness: =2
                     DataSource: =LeadInformations
                     FillPortions: =0
                     Height: |-
@@ -194,7 +195,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_contractnumber")
                         Required: =false
                         Update: =IntxtContractNumerLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =0
                         ZIndex: =1
@@ -277,7 +278,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_buildingname")
                         Required: =false
                         Update: =IntxtBuildingNameLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =1
                         ZIndex: =1
@@ -359,7 +360,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_zipcode")
                         Required: =false
                         Update: =IntxtZipcodeLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =2
                         ZIndex: =1
@@ -438,7 +439,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_address")
                         Required: =false
                         Update: =IntxtAddressLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =3
                         ZIndex: =1
@@ -519,7 +520,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =Value(IntxtUnitCountLSS.Text)
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =4
                         ZIndex: =1
@@ -606,7 +607,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_unitdescription")
                         Required: =false
                         Update: =IntxtUnitDescriptionLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =5
                         ZIndex: =1
@@ -690,7 +691,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =CboxScopeLSS.Selected
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =6
                         ZIndex: =1
@@ -777,7 +778,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =CboxScopeofWorkLSS.Selected
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =7
                         ZIndex: =1
@@ -865,7 +866,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_customscopeofwork")
                         Required: =false
                         Update: =IntxtManuallyScopeofWorkLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =8
                         ZIndex: =1
@@ -944,7 +945,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_estimatedhours")
                         Required: =false
                         Update: =IntxtEstimatedHoursLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =9
                         ZIndex: =1
@@ -1026,7 +1027,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_notes")
                         Required: =false
                         Update: =IntxtNotesLSS.Text
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =10
                         ZIndex: =1
@@ -1107,7 +1108,7 @@ LeadSummaryScreen As screen:
                         Height: =60
                         Required: =false
                         Update: =UnitDownLSS.Default
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =11
                         ZIndex: =1
@@ -1169,7 +1170,7 @@ LeadSummaryScreen As screen:
                         Height: =61
                         Required: =false
                         Update: =AdditionalExpensesRequiredLSS.Default
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =12
                         ZIndex: =1
@@ -1238,7 +1239,7 @@ LeadSummaryScreen As screen:
                         Required: =false
                         Update: =IntxtTotalEstimatedExpenseLSS.Text
                         Visible: =VarAdditionExpense
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =13
                         ZIndex: =1
@@ -1330,7 +1331,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =TravelRequiredLSS.Default
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =14
                         ZIndex: =1
@@ -1398,7 +1399,7 @@ LeadSummaryScreen As screen:
                         Required: =false
                         Update: =intxtTotalEstimatedHoursofTravelLSS.Text
                         Visible: =VarTravel
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =15
                         ZIndex: =1
@@ -1492,7 +1493,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =CommunicatedtoCustomerLSS.Default
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =16
                         ZIndex: =1
@@ -1561,7 +1562,7 @@ LeadSummaryScreen As screen:
                         Required: =false
                         Update: =IntxtCustomerNameLSS.Text
                         Visible: =VarCommunication
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =17
                         ZIndex: =1
@@ -1656,7 +1657,7 @@ LeadSummaryScreen As screen:
                         Required: =false
                         Update: =txtphonenumber_2.Text
                         Visible: =VarCommunication
-                        Width: =Parent.Width
+                        Width: =727
                         X: =0
                         Y: =18
                         ZIndex: =1
@@ -1716,7 +1717,7 @@ LeadSummaryScreen As screen:
 
                         txtPhonenumberformat_2 As text:
                             Default: ="(000)-000-0000"
-                            Height: =44
+                            Height: =0
                             Visible: =false
                             Width: =708
                             X: =19
