--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1468,7 +1468,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =CommunicatedtoCustomerLSS.Default
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =16
                         ZIndex: =1
