--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1536,7 +1536,7 @@ LeadSummaryScreen As screen:
                         Required: =false
                         Update: =IntxtCustomerNameLSS.Text
                         Visible: =VarCommunication
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =17
                         ZIndex: =1
