--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1629,7 +1629,7 @@ LeadSummaryScreen As screen:
                         Required: =false
                         Update: =txtphonenumber_2.Text
                         Visible: =VarCommunication
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =18
                         ZIndex: =1
