--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1149,7 +1149,7 @@ LeadSummaryScreen As screen:
                         Height: =61
                         Required: =false
                         Update: =AdditionalExpensesRequiredLSS.Default
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =12
                         ZIndex: =1
