--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1088,7 +1088,7 @@ LeadSummaryScreen As screen:
                         Height: =60
                         Required: =false
                         Update: =UnitDownLSS.Default
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =11
                         ZIndex: =1
