--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -276,7 +276,7 @@ LeadSummaryScreen As screen:
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_buildingname")
                         Required: =false
                         Update: =IntxtBuildingNameLSS.Text
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =1
                         ZIndex: =1
