--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -512,7 +512,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =Value(IntxtUnitCountLSS.Text)
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =4
                         ZIndex: =1
