--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -679,7 +679,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =CboxScopeLSS.Selected
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =6
                         ZIndex: =1
