--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -764,7 +764,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         Required: =false
                         Update: =CboxScopeofWorkLSS.Selected
-                        Width: =731
+                        Width: =Parent.Width
                         X: =0
                         Y: =7
                         ZIndex: =1
