--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -170,8 +170,8 @@ LeadSummaryScreen As screen:
                     FillPortions: =0
                     Height: |-
                         =//ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+CustomerContactLSS.Height+CustomerNameLSS.Height+TotalEstimatedExpenseLSS.Height+TotalEstimatedHoursofTravelLSS.Height+50
-                        ContractNumberLSS.Height + BuildingNameLSS.Height + ZipCodeLSS.Height + AddressLSS.Height + UnitCountLSS.Height + UnitDescriptionLSS.Height + ScopeLSS.Height + ScopeOfWorkLSS.Height + ManuallyScopeOfWorkLSS.Height + EstimatedHoursLSS.Height + NotesLSS.Height + UnitDownLSS.Height + AdditionalExpensesRequiredLSS.Height + 
-                            TravelRequiredLSS.Height + CommunicatedtoCustomerLSS.Height + CustomerNameLSS.Height+CustomerContactLSS.Height+TotalEstimatedHoursofTravelLSS.Height+TotalEstimatedExpenseLSS.Height+50
+                        /*ContractNumberLSS.Height + BuildingNameLSS.Height + ZipCodeLSS.Height + AddressLSS.Height + UnitCountLSS.Height + UnitDescriptionLSS.Height + ScopeLSS.Height + ScopeOfWorkLSS.Height + ManuallyScopeOfWorkLSS.Height + EstimatedHoursLSS.Height + NotesLSS.Height + UnitDownLSS.Height + AdditionalExpensesRequiredLSS.Height + */
+                        1500 + CustomerNameLSS.Height+CustomerContactLSS.Height+TotalEstimatedHoursofTravelLSS.Height+TotalEstimatedExpenseLSS.Height
                           //  If(CboxCCLSS.Value=true, CustomerNameLSS.Height+CustomerContactLSS.Height,5)+
                            //   If(cboxTravelRequiredLSS.Value=true,TotalEstimatedHoursofTravelLSS.Height,5)+
                             //  If(cboxAELSS.Value=true,TotalEstimatedExpenseLSS.Height,5)+40)
@@ -1208,7 +1208,7 @@ LeadSummaryScreen As screen:
                     TotalEstimatedExpenseLSS As typedDataCard.textualEditCard:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
-                        BorderThickness: =2
+                        BorderThickness: =0
                         DataField: ="shlrf_totalestimatedexpense"
                         Default: =ThisItem.TotalEstimatedExpense
                         DisplayMode: =Parent.DisplayMode
@@ -1364,7 +1364,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     TotalEstimatedHoursofTravelLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(202, 202, 202, 1)
+                        BorderColor: =
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="shlrf_totalestimatedhoursoftravel"
                         Default: =ThisItem.TotalEstimatedHoursofTravel
