--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1452,7 +1452,7 @@ LeadScreen As screen:
                                     StatusDate:Now()
                                 }
                             );
-                            LeadRejected.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
+                           // LeadRejected.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
                             Notify("Lead rejected with comment successfully.");
                         )
                     Text: ="Submit back to technician"
@@ -2180,7 +2180,7 @@ LeadScreen As screen:
                     LeadInformationLID:LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID),
                     IsQQApp:true
                 });
-                TechnicianMessage.Run(glryleadlistLS.Selected.Email,User().FullName,glryleadlistLS.Selected.LeadTrackingNumber);
+                //TechnicianMessage.Run(glryleadlistLS.Selected.Email,User().FullName,glryleadlistLS.Selected.LeadTrackingNumber);
                 If(
                         (!IsEmpty(Errors(LeadChats))),
                         Notify(
@@ -2439,11 +2439,11 @@ LeadScreen As screen:
                             )
                         ),
                         //Updating proposed price and proposed incentives
-                        LeadQuoted.Run(
-                            glryleadlistLS.Selected.Email,
-                            glryleadlistLS.Selected.LeadTrackingNumber,
-                            VarLoggedInUser.FullName
-                        );
+                       // LeadQuoted.Run(
+                         //   glryleadlistLS.Selected.Email,
+                          //  glryleadlistLS.Selected.LeadTrackingNumber,
+                           // VarLoggedInUser.FullName
+                        //);
                         UpdateIf(
                             LeadInformations,
                             ID = VarSelectedLead.ID,
@@ -2500,9 +2500,9 @@ LeadScreen As screen:
                         ,
                 
                 //updating sold price and sold incentives
-                LeadSold.Run( glryleadlistLS.Selected.Email,
-                            glryleadlistLS.Selected.LeadTrackingNumber,
-                            VarLoggedInUser.FullName);
+                //LeadSold.Run( glryleadlistLS.Selected.Email,
+                        //    glryleadlistLS.Selected.LeadTrackingNumber,
+                          //  VarLoggedInUser.FullName);
                             
                         UpdateIf(
                             LeadInformations,
