--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -653,11 +653,11 @@ LeadListScreen As screen:
                         QQTeamEmail:VarLoggedInUser.Email
                     }
                 );
-                LeadInProgress.Run(
-                    glryleadlistLS.Selected.Email,
-                    glryleadlistLS.Selected.LeadTrackingNumber,
-                    VarLoggedInUser.FullName
-                );
+                //LeadInProgress.Run(
+                  //  glryleadlistLS.Selected.Email,
+                  //  glryleadlistLS.Selected.LeadTrackingNumber,
+                  //  VarLoggedInUser.FullName
+                //);
                 Navigate(LeadScreen);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
