--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -650,14 +650,14 @@ LeadListScreen As screen:
                         LeadStatus: "InProgress",
                         QQTeamName: VarLoggedInUser.FullName,
                         StatusDate: Now(),
-                        QQTeamEmail:VarLoggedInUser.Email
+                        QQTeamEmail: VarLoggedInUser.Email
                     }
                 );
-                //LeadInProgress.Run(
-                  //  glryleadlistLS.Selected.Email,
-                  //  glryleadlistLS.Selected.LeadTrackingNumber,
-                  //  VarLoggedInUser.FullName
-                //);
+                LeadInProgress.Run(
+                    glryleadlistLS.Selected.Email,
+                    glryleadlistLS.Selected.LeadTrackingNumber,
+                    VarLoggedInUser.FullName
+                );
                 Navigate(LeadScreen);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
