--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -25,7 +25,7 @@ DashboardScreen As screen:
             PaddingLeft: =10
             PaddingRight: =10
             Width: =Parent.Width
-            ZIndex: =2
+            ZIndex: =1
 
             ctnmyleadtabDS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
@@ -295,7 +295,7 @@ DashboardScreen As screen:
             LayoutMinWidth: =250
             Visible: =//VarAllLeads
             Width: =Parent.Width
-            ZIndex: =3
+            ZIndex: =2
 
             Container3 As groupContainer.verticalAutoLayoutContainer:
                 Height: =Parent.Height-420
@@ -484,7 +484,7 @@ DashboardScreen As screen:
             LayoutMode: =LayoutMode.Auto
             Visible: =false
             Width: =Parent.Width
-            ZIndex: =4
+            ZIndex: =3
 
             lblcontractsyncDS As label:
                 Font: =Font.Arial
@@ -520,7 +520,7 @@ DashboardScreen As screen:
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             Visible: =false
-            ZIndex: =5
+            ZIndex: =4
 
             lblcontractDS As label:
                 FontWeight: =FontWeight.Semibold
@@ -608,6 +608,49 @@ DashboardScreen As screen:
                 X: =lblleadpriceDS.Width+lblleadpriceDS.X
                 Y: =recttechnicianDS.Height+recttechnicianDS.Y+30
                 ZIndex: =9
+
+        Button2 As button:
+            AlignInContainer: =AlignInContainer.Center
+            OnSelect: |-
+                =ForAll(Filter(SHFPEstimates,'Lead Generator Id'="10221920") As i,
+                If(IsBlank(LookUp(LeadInformations,LeadEstimateNumber=i.Estimate)),
+                Patch(
+                        LeadInformations,
+                        Defaults(LeadInformations),
+                        {
+                            ID:GUID(),
+                            'ContractNumber ': i.MaintContractNumber,
+                            'BuildingName ': i.BuildingName,
+                            'ZipCode ': i.BuildingZip,
+                            Address: i.BuildingAddress,
+                           // NumberofUnits: ,
+                           // UnitDescription: ,
+                            //PrimaryScopeofWorkLID: ,
+                            //SecondaryScopeofWorkLID:,
+                            CustomScopeofWork: i.ShortWorkDescription,
+                            'EstimatedHours ': i.'Straight Hours',
+                           // Notes: ,
+                            //IsUnitDown: ,
+                           // AdditionalExpensesRequired: ,
+                         // TravelRequired: ,
+                            CommunicatedToCustomer: true,
+                            'CustomerName ': i.CustomerName,
+                           // 'CustomerContact ': ,
+                            //TotalEstimatedExpense:,
+                            //TotalEstimatedHoursofTravel: ,
+                            LeadStatus:If(LookUp(SHFPEstimates,Estimate=i.Estimate,JobStatus)="Dead","Rejected",LookUp(SHFPEstimates,Estimate=i.Estimate,JobStatus)="Open","Quoted",LookUp(SHFPEstimates,Estimate=i.Estimate,JobStatus)="Sold","Sold"),
+                            LeadDate: Now(),
+                            StatusDate: Now(),
+                           // Email: ,
+                           // MechanicName: ,
+                            TechnicianID: i.'Lead Generator Id',
+                            Area: i.Area,
+                            Territory: i.Territory,
+                            District: i.District
+                        }
+                    );))
+            Text: ="Patch old leads"
+            ZIndex: =5
 
         ctnschindlerimg As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.End
