--- a/QuantumTechnicianApp/Src/UserValidateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UserValidateScreen.fx.yaml
@@ -1,4 +1,4 @@
-Screen1 As screen:
+UserValidateScreen As screen:
     OnVisible: =VarFormMode
 
     PopopContracterrorCS_1 As groupContainer.manualLayoutContainer:
