--- a/QuantumTechnicianApp/Src/UserValidateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UserValidateScreen.fx.yaml
@@ -1,7 +1,7 @@
 UserValidateScreen As screen:
     OnVisible: =VarFormMode
 
-    PopopContracterrorCS_1 As groupContainer.manualLayoutContainer:
+    PopopContracterrorUVS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
         Height: =Parent.Height
         Visible: =true 
