--- a/QuantumQQTeamApp/Src/Screen1.fx.yaml
+++ b/QuantumQQTeamApp/Src/Screen1.fx.yaml
@@ -5,7 +5,7 @@ Screen1 As screen:
         DisplayMode: =DisplayMode.Edit
         Fill: =RGBA(0, 0, 0, 0)
         Height: =540
-        Items: =LCLeadInformations
+        Items: =LeadInformations
         Width: =1366
         X: =0
         Y: =0
