--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -654,6 +654,7 @@ DashboardScreen As screen:
                         }
                     );))
             Text: ="Patch old leads"
+            Visible: =false
             ZIndex: =5
 
         ctnschindlerimg As groupContainer.verticalAutoLayoutContainer:
